tests/samples/negative/generics/duplicate_param.ax
module duplicate_param;

struct Bad[T, T] {
    value: T;
}

fn main() -> i32 {
    return 0;
}
